# Chatbot-For-Competitive_Exams

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
chatbot/: agent.py  chatbot.py  tools.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  Chat.js  ChatWindow.js  Login.js  Sidebar.js
jules-scratch/verification/: verify.py
